--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-n": "16.1.0",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "6.1.1",
-    "jest": "29.7.0"
+    "jest": "29.7.0",
+    "prettier-eslint": "16.3.0"
   }
 }
